--- a/Home page.html
+++ b/Home page.html
@@ -17,8 +17,8 @@
             </div>
             <div class="log_in_register">
                 <p>Hello guest! <br> 
-                use <a href="Sections/Login.html">LOG IN</a> or <a href="/Sections/Register.html">REGISTER</a> to join the page</p>
-                <img src="Images/Default user.png" alt="icono de cuenta">
+                use <a href="Sections/Login.html">LOG IN</a> or <a href="Sections/Register.html">REGISTER</a> to join the page</p>
+                <a href="Sections/User data edition.html"><img src="Images/Default user.png" alt="icono de cuenta" /></a>
             </div>
         </div>
         <div class="links_bar">
