--- a/Sections/About.html
+++ b/Sections/About.html
@@ -18,7 +18,7 @@
             <div class="log_in_register">
                 <p>Hello guest! <br> 
                     use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
-                <img src="../Images/Default user.png" alt="icono de cuenta">
+                    <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
             </div>
         </div>
         <div class="links_bar">
