--- a/Sections/Login.html
+++ b/Sections/Login.html
@@ -1,82 +1,145 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Maverick : LogIn</title>
-    <link rel="stylesheet" href="../Styles/Style.css">
-    <link rel="stylesheet" href="../Styles/Login.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <div class="content">
-        <div class="top">
-            <a href="../Home page.html" class="titulo"><img src="../Images/store logo.png" alt=""></a>
-            <div class="fast_search">
-                <input type="submit" value="SEARCH">
-                <input class="text_input" type="text" placeholder="Search in store">
-            </div>
-            <div class="log_in_register">
-                <p>Hello guest! <br> 
-                    use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
-                <img src="../Images/Default user.png" alt="icono de cuenta">
-            </div>
-        </div>
-        <div class="links_bar">
-            <a href="../Home page.html">HOME</a>
-            <a href="Search.html">SEARCH</a>
-            <a href="Categories.html">CATEGORIES</a>
-            <a href="About.html">ABOUT</a>
-            <a href="Contact.html">CONTACT</a>
+    <link rel="stylesheet" href="../Styles/Style.css" />
+    <link rel="stylesheet" href="../Styles/Login.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#submit").click(function () {
+          const user_name = document.querySelector("#user_name");
+          const password = document.querySelector("#password");
+          const user_name_val = $("#user_name").val();
+          const password_val = $("#password").val();
+          var correct_submit = true;
+          if (password_val.length < 8) {
+            password.setCustomValidity(
+              "La contraseña debe tener un minimo de 8 caracteres"
+            );
+            password.reportValidity();
+            correct_submit = false;
+          } else if (password_val.length > 20) {
+            password.setCustomValidity(
+              "La contraseña debe tener un maximo de 20 caracteres"
+            );
+            password.reportValidity();
+            correct_submit = false;
+          }
 
+          if (user_name_val.length < 1) {
+            user_name.setCustomValidity("El campo no debe estar vacio");
+            user_name.reportValidity();
+            correct_submit = false;
+          } else if (user_name_val.length < 6) {
+            user_name.setCustomValidity(
+              "El nombre de usuario debe tener un minimo de 6 caracteres"
+            );
+            user_name.reportValidity();
+            correct_submit = false;
+          } else if (user_name_val.length > 20) {
+            user_name.setCustomValidity(
+              "El nombre de usuario debe tener un maximo de 20 caracteres"
+            );
+            user_name.reportValidity();
+            correct_submit = false;
+          }
+          if (!correct_submit) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+        });
+      });
+    </script>
+  </head>
+  <body>
+    <div class="content">
+      <div class="top">
+        <a href="../Home page.html" class="titulo"
+          ><img src="../Images/store logo.png" alt=""
+        /></a>
+        <div class="fast_search">
+          <input type="submit" value="SEARCH" />
+          <input class="text_input" type="text" placeholder="Search in store" />
         </div>
-        <div class="mid">
-            <div class="mid_left">
-                <h1>categories</h1>
-                <a href="../Sections/Categories.html">
-                    All
-                </a>
-                <a href="Horror category.html">
-                    Horror
-                </a>
-                <a href="Open world category.html">
-                    Open world
-                </a>
-                <a href="Survival category.html">
-                    Survival
-                </a>
-                <a href="Action category.html">
-                    Action
-                </a>
-                <a href="Race category.html">
-                    Race
-                </a>
-                <a href="Sports category.html">
-                    Sports
-                </a>
-                <a href="Rpg category.html">
-                    Rpg
-                </a>
+        <div class="log_in_register">
+          <p>
+            Hello guest! <br />
+            use <a href="Login.html">LOG IN</a> or
+            <a href="Register.html">REGISTER</a> to join the page
+          </p>
+          <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
+        </div>
+      </div>
+      <div class="links_bar">
+        <a href="../Home page.html">HOME</a>
+        <a href="Search.html">SEARCH</a>
+        <a href="Categories.html">CATEGORIES</a>
+        <a href="About.html">ABOUT</a>
+        <a href="Contact.html">CONTACT</a>
+      </div>
+      <div class="mid">
+        <div class="mid_left">
+          <h1>categories</h1>
+          <a href="../Sections/Categories.html"> All </a>
+          <a href="Horror category.html"> Horror </a>
+          <a href="Open world category.html"> Open world </a>
+          <a href="Survival category.html"> Survival </a>
+          <a href="Action category.html"> Action </a>
+          <a href="Race category.html"> Race </a>
+          <a href="Sports category.html"> Sports </a>
+          <a href="Rpg category.html"> Rpg </a>
+        </div>
+        <div class="mid_right">
+          <div class="login">
+            <h1>LOG IN</h1>
+            <div class="col-md-12 position-relative">
+              <label for="user_name" class="form-label">User name</label>
+              <input type="text" class="form-control" id="user_name" required />
+              <div class="invalid-feedback">required field</div>
             </div>
-            <div class="mid_right">
-                <div class="login">
-                    <h1>
-                        LOG IN
-                    </h1>
-                    <div class="username">
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" id="username">
-                      </div>
-                      <div class="password">
-                        <input type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" id="password">
-                      </div>
-                      <div class="confirm_password">
-                        <input type="text" class="form-control" placeholder="Confirm password" aria-label="Confirm password" aria-describedby="basic-addon1" id="confirm_password">
-                      </div>
-                </div>
+            <div class="col-md-12 position-relative">
+              <label for="password" class="form-label">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                required
+              />
+              <div class="invalid-feedback">required field</div>
             </div>
+            <div>
+              <label for="user_name" class="form-label">User type</label>
+              <select class="form-select" aria-label="Default select example">
+                <option value="1">User</option>
+                <option value="2">Administration</option>
+              </select>
+            </div>
+            <div class="col-12 position-relative">
+              <button class="btn btn-primary" type="submit" id="submit">
+                Submit
+              </button>
+            </div>
+            <div>
+              <a href="Recover password.html">Recover password?</a>
+            </div>
+          </div>
         </div>
-        <div class="bottom">
-        </div>
+      </div>
+      <div class="bottom"></div>
     </div>
-</body>
+  </body>
 </html>
