--- a/Home page.html
+++ b/Home page.html
@@ -27,6 +27,8 @@
             <a href="Sections/Categories.html">CATEGORIES</a>
             <a href="Sections/About.html">ABOUT</a>
             <a href="Sections/Contact.html">CONTACT</a>
+            <a href="Sections/Carrito.html">CARRITO</a>
+            <a href="Sections/Administracion.html">ADMINISTRACION</a>
         </div>
         <div class="mid">
             <div class="mid_left">
