--- a/Sections/Administracion.html
+++ b/Sections/Administracion.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : ABOUT</title>
+    <title>Game Maverick : ADMINISTRACION</title>
     <link rel="stylesheet" href="../Styles/Style.css">
-    <link rel="stylesheet" href="../Styles/About.css">
+    <link rel="stylesheet" href="../Styles/Administracion.css">
 </head>
 <body>
     <div class="content">
@@ -17,8 +17,8 @@
             </div>
             <div class="log_in_register">
                 <p>Hello guest! <br> 
-                    use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
-                    <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
+                use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
+                <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
             </div>
         </div>
         <div class="links_bar">
@@ -33,7 +33,7 @@
         <div class="mid">
             <div class="mid_left">
                 <h1>categories</h1>
-                <a href="../Sections/Categories.html">
+                <a href="Categories.html">
                     All
                 </a>
                 <a href="Horror category.html">
@@ -59,15 +59,15 @@
                 </a>
             </div>
             <div class="mid_right">
-                <div class="about">
-                    <h1>About us</h1>
-                    <p>Nos dedicamos a la venta de juegos de diversas categorias y plataformas. 
-                    fundamos esta compañia en el año 20XX y a la fecha tenemos XX años de experiercia 
-                    </p>
+                <div>
+                    <a href="Reg de productos.html">REGISTRO DE PRODUCTOS</a>
+                    <a href="Reg de movimientos usuario.html">REGISTRO DE MOVIMIENTOS DE USUARIO</a>
+                    <a href="Inventario.html">INVENTARIO</a>
                 </div>
             </div>
         </div>
         <div class="bottom">
+            <h1>INFO</h1>
         </div>
     </div>
 </body>
