--- a/Sections/User data edition.html
+++ b/Sections/User data edition.html
@@ -160,6 +160,8 @@
         <a href="Categories.html">CATEGORIES</a>
         <a href="About.html">ABOUT</a>
         <a href="Contact.html">CONTACT</a>
+        <a href="Carrito.html">CARRITO</a>
+        <a href="Administracion.html">ADMINISTRACION</a>
       </div>
       <div class="mid">
         <div class="mid_left">
