--- a/Sections/Reg de productos.html
+++ b/Sections/Reg de productos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Maverick : ABOUT</title>
+    <title>Game Maverick : ADMINISTRACION</title>
     <link rel="stylesheet" href="../Styles/Style.css">
-    <link rel="stylesheet" href="../Styles/About.css">
+    <link rel="stylesheet" href="../Styles/Reg de productos.css">
 </head>
 <body>
     <div class="content">
@@ -17,8 +17,8 @@
             </div>
             <div class="log_in_register">
                 <p>Hello guest! <br> 
-                    use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
-                    <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
+                use <a href="Login.html">LOG IN</a> or <a href="Register.html">REGISTER</a> to join the page</p>
+                <a href="User data edition.html"><img src="../Images/Default user.png" alt="icono de cuenta" /></a>
             </div>
         </div>
         <div class="links_bar">
@@ -33,7 +33,7 @@
         <div class="mid">
             <div class="mid_left">
                 <h1>categories</h1>
-                <a href="../Sections/Categories.html">
+                <a href="Categories.html">
                     All
                 </a>
                 <a href="Horror category.html">
@@ -59,11 +59,39 @@
                 </a>
             </div>
             <div class="mid_right">
-                <div class="about">
-                    <h1>About us</h1>
-                    <p>Nos dedicamos a la venta de juegos de diversas categorias y plataformas. 
-                    fundamos esta compañia en el año 20XX y a la fecha tenemos XX años de experiercia 
-                    </p>
+                <div class="Items">
+                    <div class="Item">
+                        <a href="Mega man 11.html"><h1>Mega Man 11</h1></a>
+                        <h1>Categoria : Otros</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Devil may cry.html"><h1>Devil May Cry</h1></a>
+                        <h1>Categoria : Accion</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Burnout 2.html"><h1>Burnout 2</h1></a>
+                        <h1>Categoria : Race</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Cry of fear.html"><h1>Cry of fear</h1></a>
+                        <h1>Categoria : Horror</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Downhill domination.html"><h1>Downhill domination</h1></a>
+                        <h1>Categoria : Sports</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="FinalFantasy6.html"><h1>Final fantasy 6</h1></a>
+                        <h1>Categoria : Rpg</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Gta san andreas.html"><h1>Gta san andreas</h1></a>
+                        <h1>Categoria : Open world</h1>
+                    </div>
+                    <div class="Item">
+                        <a href="Valheim.html"><h1>Valheim</h1></a>
+                        <h1>Categoria : Survival</h1>
+                    </div>
                 </div>
             </div>
         </div>
