--- a/Sections/Register.html
+++ b/Sections/Register.html
@@ -143,6 +143,8 @@
         <a href="Categories.html">CATEGORIES</a>
         <a href="About.html">ABOUT</a>
         <a href="Contact.html">CONTACT</a>
+        <a href="Carrito.html">CARRITO</a>
+        <a href="Administracion.html">ADMINISTRACION</a>
 
       </div>
       <div class="mid">
@@ -219,8 +221,8 @@
                   required
                 />
                 <div id="passwordHelpBlock" class="form-text">
-                  password must be 8-20 characters long and contain only letters
-                  and numbers
+                  password must be 8-20 characters long and contain letters
+                  ,numbers and any of these Symbols("!$%&")
                 </div>
                 <div class="invalid-feedback">required field</div>
               </div>
